(Sonar) Fixed finding: "`Stream.toList()` should be used instead of `collectors`"